[gd_scene load_steps=5 format=3 uid="uid://bjqyy13j6nj6w"]

[ext_resource type="Script" uid="uid://b15htf3fnsdoj" path="res://Scenes/Newspaper/newspaper.gd" id="1_72c1i"]
[ext_resource type="Texture2D" uid="uid://cihd6j8gc6yuj" path="res://Assets/Newspaper/newspaper_BG.jpg" id="2_2spfm"]
[ext_resource type="Texture2D" uid="uid://dd3x0c034h5jp" path="res://Assets/Newspaper/DeskPlaceHolder.webp" id="2_yfima"]
[ext_resource type="Texture2D" uid="uid://bkb0moxfctemn" path="res://Assets/Newspaper/coffee.png" id="3_2spfm"]

[node name="NewspaperScene" type="Node2D"]
script = ExtResource("1_72c1i")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(587, 331)
scale = Vector2(0.7, 0.5)
texture = ExtResource("2_yfima")

[node name="YearSelection" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 7.0
offset_right = 76.0
offset_bottom = 388.0

[node name="1970" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1970"

[node name="1971" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1971"

[node name="1972" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1972"

[node name="1973" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1973"

[node name="1974" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1974"

[node name="1975" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1975"

[node name="1976" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1976"

[node name="1977" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1977"

[node name="1978" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1978"

[node name="1979" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1979"

[node name="1980" type="Button" parent="YearSelection"]
layout_mode = 2
text = "1980"

[node name="DisplayedNewspaper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Background" type="TextureRect" parent="DisplayedNewspaper"]
layout_mode = 2
offset_left = 250.0
offset_right = 1029.0
offset_bottom = 722.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2spfm")
expand_mode = 2

[node name="ArticleImage" type="TextureRect" parent="DisplayedNewspaper"]
layout_mode = 2
offset_left = 298.0
offset_top = 104.0
offset_right = 682.0
offset_bottom = 397.0
expand_mode = 2

[node name="HeadlineLabel" type="Label" parent="DisplayedNewspaper"]
layout_mode = 2
offset_left = 280.0
offset_top = 42.0
offset_right = 995.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyText" type="RichTextLabel" parent="DisplayedNewspaper"]
layout_mode = 2
offset_left = 269.0
offset_top = 398.0
offset_right = 1006.0
offset_bottom = 708.0
theme_override_colors/default_color = Color(0, 0, 0, 1)

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 1058.0
offset_top = -2.0
offset_right = 1202.0
offset_bottom = 155.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_2spfm")
ignore_texture_size = true
stretch_mode = 0

[node name="ArticleSelection" type="VBoxContainer" parent="."]
offset_left = 85.0
offset_top = 8.0
offset_right = 125.0
offset_bottom = 48.0

[connection signal="pressed" from="YearSelection/1970" to="." method="_on_1970_pressed"]
[connection signal="pressed" from="YearSelection/1971" to="." method="_on_1971_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
